fix improve the visibility of figcaption

--- a/components/Figure/figure.module.css
+++ b/components/Figure/figure.module.css
@@ -22,14 +22,15 @@
   height: 100%;
   background-image: linear-gradient(
     180deg,
-    rgba(223, 223, 33, 0) 50%,
-    rgb(16, 16, 18) 100%
+    rgba(228, 228, 23, 0) 50%,
+    rgba(23, 21, 22, 0.55) 100%
   );
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  mix-blend-mode: lighten;
-  filter: contrast(80%) brightness(80%) opacity(80%);
+  /* mix-blend-mode: darken; */
+  /* mix-blend-mode: lighten; */
+  filter: brightness(10%) ;
   z-index: 1;
 }
 
